# CPP-2023-5-1-Calculator

./: CMakeLists.txt  Calculator.cpp  Calculator.h  Dll_Reader.cpp  Dll_Reader.h  README.md  main.cpp
Plugins/: cos.cpp  ctg.cpp  lg.cpp  ln.cpp  sin.cpp  sqrt.cpp  tg.cpp
